# xgbwwdata

./: .gitignore  AnalyzeLongRun.ipynb  AnalyzeLongRun_RandomBinary_ModelId.ipynb  README.md  XGBDataTest.ipynb  XGBWW_Catalog_Random5_XGBoost_Accuracy.ipynb  XGBWW_Checkpoint_PerSource_Validation.ipynb  XGBWW_Dataset_Catalog_Checkpoint.ipynb  XGBWW_Multisource_Experiment.ipynb  XGBWW_OpenML_1049_W1W2W7W8W9_Alpha_Checkpoint.ipynb  XGBWW_OpenML_1049_W7W8_Alpha_Checkpoint.ipynb  XGBWW_OpenML_1049_W7W8_Alpha_Checkpoint_WWPlots.ipynb  XGBWW_OpenML_RandomBinary_W1W2W7W8W9_Alpha_Checkpoint.ipynb  XGBWW_OpenML_W1W2W7W8W9_for_openml_id.ipynb  pyproject.toml  requirements.txt
longruns/: AnalyzeLongRun_925.ipynb  AnalyzeLongRun_openml_1049.ipynb  AnalyzeLongRun_openml_312.ipynb  AnalyzeLongRun_openml_312_foobar.ipynb  AnalyzeLongRun_openml_38_foobar.ipynb  AnalyzeLongRun_openml_44433.ipynb  AnalyzeLongRun_openml_44457.ipynb  AnalyzeLongRun_openml_44457_.ipynb  AnalyzeLongRun_openml_44545.ipynb  AnalyzeLongRun_openml_4534.ipynb  AnalyzeLongRun_openml_45545.ipynb  AnalyzeLongRun_openml_911.ipynb
scripts/: colab_install.py
src/xgbwwdata/: __init__.py  config.py  preprocess.py  registry.py
src/xgbwwdata/sources/: amlb.py  base.py  keel.py  openml.py  pmlb.py
tests/: test_openml_filtering.py  test_preprocess_guards.py  test_smoke.py
