[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgbwwdata"
version = "0.1.0"
description = "Dataset scanning + loading utilities for large-scale XGBoost2WW / WeightWatcher experiments."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "CalculatedContent"}]
keywords = ["xgboost", "weightwatcher", "datasets", "benchmark", "openml", "pmlb", "libsvm", "keel", "amlb"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.2",
  "scipy>=1.10",
  "xgboost>=1.7",
  "requests>=2.31",
]

[project.optional-dependencies]
openml = ["openml>=0.15"]
pmlb = ["pmlb>=1.0.1"]
keel = ["keel-ds>=0.1.0"]
dev = ["pytest>=7.0", "ruff>=0.3.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
